--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
@@ -116,9 +116,9 @@
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
 
-        \item \textbf{Descrizione:} il dipendente vuole visualizzare lo storico dell proprie prenotazioni;
+        \item \textbf{Descrizione:} il dipendente vuole visualizzare lo storico delle proprie prenotazioni;
 
-        \item \textbf{Precondizioni:} il dipendente ha selezionato il la funzionalità di visualizzazione delle proprie prenotazioni;
+        \item \textbf{Precondizioni:} il dipendente ha selezionato la funzionalità di visualizzazione delle proprie prenotazioni;
 
         \item \textbf{Postcondizioni:} il dipendente può visualizzare tutte le prenotazioni da lui effettuate;
 
@@ -148,7 +148,7 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui l'ID) relative alla prenotazione selezionata;
+                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui l'ID) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize}
 
@@ -165,7 +165,7 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la data) relative alla prenotazione selezionata;
+                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la data) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -178,11 +178,11 @@
 
         \item \textbf{Precondizioni:} il dipendente ha selezionato la prenotazione da visualizzare in dettaglio;
 
-        \item \textbf{Postcondizioni:} il dipendente può visualizzare l'orario d'inizio ta della prenotazione selezionata;
+        \item \textbf{Postcondizioni:} il dipendente può visualizzare l'orario d'inizio della prenotazione selezionata;
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui l'orario d'inizio) relative alla prenotazione selezionata;
+                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui l'orario d'inizio) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -199,7 +199,7 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la stanza) relative alla prenotazione selezionata;
+                 \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la stanza) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -216,7 +216,7 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui il codice della postazione prenotata) relative alla prenotazione selezionata;
+                \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui il codice della postazione prenotata) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -233,7 +233,7 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la durata) relative alla prenotazione selezionata;
+                \item il sistema aggiorna la schermata mostrando a video le informazioni in dettaglio (tra cui la durata) relative alla prenotazione selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -252,7 +252,7 @@
         \item \textbf{Scenario principale:}
             \begin{enumerate}
                 \item il dipendente seleziona la funzionalità di cancellazione della prenotazione;
-                \item il sistema aggiorna l'elenco delle prenotazioni rimuovendo quella selezionata;
+                \item il sistema aggiorna l'elenco delle prenotazioni rimuovendo quella selezionata.
             \end{enumerate}
     \end{itemize} 
 
@@ -280,7 +280,7 @@
 		\caption{Diagramma relativo all'igienizzazione di una postazione da parte di un dipendente}
 	\end{figure}
 
-\paragraph{UC-49.1 Scansione del tag RFID per segnalare avvenuta igienizzazione}
+\paragraph{UC-49.1 Scansione del tag RFID per segnalare l'avvenuta igienizzazione}
     
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -340,7 +340,7 @@
         \item \textbf{Scenario principale:}
             \begin{enumerate}
                 \item il dipendente appoggia il proprio dispositivo sul tag RFID;
-                \item il tag viene scansionato dall'applicazione;
+                \item il tag viene scansionato dall'applicazione.
             \end{enumerate}
     \end{itemize}
 
@@ -357,7 +357,7 @@
 
     \item \textbf{Scenario principale:}
         \begin{enumerate}
-            \item il sistema fornisce al dipendente lo stato attuale della postazione. La postazione può essere libera/occupata, pulita/sporca o disabilitata;
+            \item il sistema fornisce al dipendente lo stato attuale della postazione. La postazione può essere libera/occupata, pulita/sporca o disabilitata.
         \end{enumerate}
 \end{itemize}
 
