--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
@@ -1,32 +1,20 @@
 \paragraph{UC-52 Visualizzazione stanze da igienizzare}
-\begin{itemize}
-    \item \textbf{Attori:} igienizzatore;
-    \item \textbf{Descrizione:} un igienizzatore pu\`{o} visualizzare a video l'elenco delle stanze che necessitano di essere igienizzate;
-    \item \textbf{Precondizione:} l'igienizzatore ha avviato l'applicazione;
-    \item \textbf{Postcondizione:} l'igienizzatore visualizza l'elenco di tutte le stanze da igienizzare censite nel sistema;
-    \item \textbf{Scenario principale:}
-    \begin{enumerate}
-        \item l'igienizzatore avvia l'applicazione mobile;
-        \item l'applicazione mostra a video un elenco di stanze da igienizzare.
-    \end{enumerate}
-\end{itemize}
-
     \begin{itemize}
-        \item \textbf{Attori primari:} igienizzatore;
+        \item \textbf{Attore primario:} igienizzatore;
         \item \textbf{Descrizione:} l’igienizzatore può visualizzare l'elenco delle stanze (contrassegnate dal nome univoco) da igienizzare;
         \item \textbf{Precondizione:} l'igienizzatore si trova nell’apposita sezione di visualizzazione delle stanze da igienizzare; 
         \item \textbf{Postcondizione:} l'igienizzatore ha ricevuto l'elenco delle stanze da igienizzare;
         \item \textbf{Scenario principale:} 
             \begin{enumerate}
                 \item il sistema elabora la richiesta;
-                \item il sistema restituisce la lista delle stanze da igienizzare;
+                \item il sistema restituisce la lista delle stanze da igienizzare.
             \end{enumerate}
     \end{itemize}
 %TODO: controllare
 \paragraph{UC-53 Marcatura stanza come igienizzata}
 
     \begin{itemize}
-        \item \textbf{Attori primari:} igienizzatore;
+        \item \textbf{Attore primario:} igienizzatore;
         \item \textbf{Descrizione:} l’igienizzatore può marcare un'intera stanza come igienizzata, pertanto ogni postazione al suo interno è sanificata e servibile quindi dagli utenti. Tale azione viene certificata tramite la scansione del tag RFID associato alla stanza;
         \item \textbf{Precondizione:} l'igienizzatore naviga nell’apposita sezione di igienizzazione della stanza; 
         \item \textbf{Postcondizione:} l'igienizzatore ha marcato con successo una stanza come igienizzata;
@@ -48,7 +36,7 @@
 \paragraph{UC-53.1 Scansione del tag RFID per segnalare la pulizia di una stanza}
 
     \begin{itemize}
-        \item \textbf{Attori primari:} igienizzatore;
+        \item \textbf{Attore primario:} igienizzatore;
         \item \textbf{Descrizione:} l’igienizzatore vuole scansionare il tag RFID della stanza per marcarla come igienizzata;
         \item \textbf{Precondizione:} l'igienizzatore ha selezionato la stanza da marcare come igienizzata; 
         \item \textbf{Postcondizione:} l'igienizzatore ha scansionato con successo il tag RFID;
