--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
@@ -1,7 +1,7 @@
 %diagramma
 \paragraph{UC-21 Visualizzazione di tutte le postazioni presenti nel sistema}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video l'insieme delle postazioni registrate in una stanza;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di visualizzazione delle stanze registrate nell'applicazione web;
     \item \textbf{Postcondizione:} l'amministratore visualizza tutte le postazioni all'interno della stanza selezionata;
@@ -20,7 +20,7 @@
 
 \paragraph{UC-21.1 Visualizzazione postazione per codice identificativo}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una postazione censita nel sistema tramite codice identificativo;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza la postazione cui codice identificativo è uguale a quello cercato. Se non esiste alcuna postazione avente il codice identificativo inserito dall'amministratore, non verrà visualizzato alcun risultato a video;
@@ -34,7 +34,7 @@
 
 \paragraph{UC-21.2 Visualizzazione postazioni prenotate}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni prenotate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è prenotato. Se non esiste alcuna postazione prenotata, non verrà visualizzato alcun risultato a video;
@@ -47,7 +47,7 @@
 
 \paragraph{UC-21.3 Visualizzazione postazioni occupate}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni occupate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è occupato. Se non esiste alcuna postazione occupata, non verrà visualizzato alcun risultato a video;
@@ -60,7 +60,7 @@
 
 \paragraph{UC-21.4 Visualizzazione postazioni libere}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni libere censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è libero. Se non esiste alcuna postazione libera, non verrà visualizzato alcun risultato a video;
@@ -73,7 +73,7 @@
 
 \paragraph{UC-21.5 Visualizzazione postazioni igienizzate}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni igienizzate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è igienizzato. Se non esiste alcuna postazione igienizzata, non verrà visualizzato alcun risultato a video;
@@ -86,7 +86,7 @@
 
 \paragraph{UC-21.6 Visualizzazione postazioni sporche}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni sporche censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è sporco. Se non esiste alcuna postazione sporca, non verrà visualizzato alcun risultato a video;
@@ -99,7 +99,7 @@
 
 \paragraph{UC-21.7 Visualizzazione postazioni abilitate}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni abilitate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è abilitato. Se non esiste alcuna postazione abilitata, non verrà visualizzato alcun risultato a video;
@@ -112,8 +112,8 @@
 
 \paragraph{UC-21.8 Visualizzazione postazioni disabilitate}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una insieme di postazioni disabilitate censite nel sistema;
+    \item \textbf{Attore primario:} amministratore;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni disabilitate censite nel sistema;
     \item \textbf{Precondizione:} l'amministratore visualizza l'elenco di tutte le postazioni registrate nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ricerca un insieme di postazioni tramite filtro attivo e visualizza una elenco di postazioni cui stato è disabilitato. Se non esiste alcuna postazione disabilitata, non verrà visualizzato alcun risultato a video;
     \item \textbf{Scenario principale:}
@@ -125,7 +125,7 @@
     
 \paragraph{UC-22 Visualizzazione informazioni sulla postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video tutte le informazioni disponibili di una determinata postazione registrata nel sistema;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di visualizzazione delle postazioni di una stanza registrate nell'applicazione web;
     \item \textbf{Postcondizione:} l'amministratore visualizza tutti i dettagli della postazione selezionata;
@@ -144,7 +144,7 @@
 
 \paragraph{UC-22.1 Visualizzazione codice postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video il codice identificativo univoco di una postazione precedentemente selezionata;
     \item \textbf{Precondizione:} l'amministratore sta visualizzando a video i dettagli di una postazione selezionata;
     \item \textbf{Postcondizione:} l'amministratore visualizza il codice identificativo della postazione desiderata;
@@ -156,7 +156,7 @@
 
 \paragraph{UC-22.2 Visualizzazione stato della postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video lo stato di una postazione all'interno di una stanza precedentemente selezionata;
     \item \textbf{Precondizione:} l'amministratore sta visualizzando a video i dettagli di una postazione selezionata;
     \item \textbf{Postcondizione:} l'amministratore visualizza lo stato della postazione (prenotata, libera o occupata) interna alla stanza selezionata;
@@ -169,7 +169,7 @@
 
 \paragraph{UC-22.3 Visualizzazione stato pulizia della postazione} 
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video lo stato di pulizia di una postazione all'interno della stanza precedentemente selezionata;
     \item \textbf{Precondizione:} l'amministratore sta visualizzando a video i dettagli di una postazione selezionata;
     \item \textbf{Postcondizione:} l'amministratore visualizza lo stato di pulizia della postazione (sporca o igienizzata) interna alla stanza selezionata;
@@ -181,7 +181,7 @@
 
 \paragraph{UC-23 Aggiunta di una nuova postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili all'interno di una stanza. Per inserire una nuova postazione, l'amministrazione prima seleziona la stanza dove inserire la nuova postazione (UC-23.1 Selezione stanza), successivamente, è richiesto l'inserimento del codice identificativo della postazione (UC-23.2 Inserimento codice postazione) ed infine, inserire il codice del tag RFID per associarlo alla postazione appena creata (UC-23.3 Inserimento codice del tag RFID);
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} una nuova postazione \`{e} stata aggiunta alla lista di postazioni disponibili;
@@ -200,7 +200,7 @@
 
 \paragraph{UC-23.1 Selezione stanza}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} selezionare una stanza già censita nel sistema dove inserire una nuova postazione dall'elenco delle stanze nel form di inserimento di una nuova postazione;
     \item \textbf{Precondizione:} l'amministratore sta visualizzando a video il form di inserimento di una nuova postazione;
     \item \textbf{Postcondizione:} l'amministratore ha selezionato correttamente una stanza censita all'interno del sistema;
@@ -303,7 +303,7 @@
 
 \paragraph{UC-26 Modifica dati di una postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} modificare i dati di una postazione già esistente modificando, nello specifico, il codice della postazione e/o il codice RFID;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} l'amministratore ha modificato con successo i dati relativi ad una postazione esistente;
@@ -342,7 +342,7 @@
     
 \paragraph{UC-26.2 Modifica codice tag RFID}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} modificare il tag RFID di una postazione già censita nel sistema;
     \item \textbf{Precondizione:} l'amministratore ha selezionato la funzionalità di modifica del codice tag RFID per una postazione già censita nel sistema;
     \item \textbf{Postcondizione:} l'amministratore ha modificato con successo il codice tag RFID di una postazione;
@@ -360,7 +360,7 @@
  
 \paragraph{UC-27 Rimozione di una postazione dal sistema}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} rimuovere una postazione dalla lista di postazioni disponibili all'interno di una stanza. Per rimuovere una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera rimuovere e, successivamente, l'amministratore selezionerà la funzione di rimozione della postazione selezionata. Una volta rimossa la postazione, tutte le prenotazioni vengono annullate;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} una postazione \`{e} stata rimossa dalla lista di postazioni disponibili, e le prenotazioni attive per la prenotazione rimossa vengono annullate;
@@ -374,7 +374,7 @@
 
 \paragraph{UC-28 Disabilitazione di una postazione}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} disabilitare una postazione dalla lista di postazioni disponibili all'interno di una stanza. Per disabilitare una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera disabilitare e, successivamente, l'amministratore selezionerà la funzione di disabilitazione della postazione selezionata. Una volta disabilitata la postazione, tutte le prenotazioni vengono annullate;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} una postazione \`{e} stata disabilitata con successo, e le prenotazioni attive per la prenotazione rimossa vengono annullate;
@@ -388,7 +388,7 @@
 
 \paragraph{UC-29 Riabilitazione di una postazione precedentemente disabilitata}
 \begin{itemize}
-    \item \textbf{Attori:} amministratore;
+    \item \textbf{Attore primario:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ri-abilitare una postazione precedentemente segnata come disabilitata all'interno di una stanza. Per ri-abilitare una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera ri-abilitare e, successivamente, l'amministratore selezionerà la funzione di ri-abilitazione della postazione selezionata. Una volta ri-abilitata la postazione, questa torna ad essere fruibile e prenotabile dagli utenti;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} una postazione \`{e} stata ri-abilitata con successo, quindi prenotabile e servibile nuovamente;
