--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
@@ -78,7 +78,7 @@
     R-24-F-O & Il sistema deve permettere ad un utente di autenticarsi presso l'applicazione mobile& UC-35\\
     R-24.1-F-O & Il sistema deve permettere l'inserimento delle credenziali da parte dell'utente per effettuare il login presso l'applicazione mobile& UC-35.1\\
     R-25-F-O & Il sistema deve permettere il recupero della password presso l'applicazione mobile& UC-37\\
-    R-25.1-F-O & Il sistema deve permettere ad un utente di inserire la mail di registrazione alla quale verrà inviato il link per il ripristino della password presso l'applicazione mobile& UC-37.1\\
+    R-25.1-F-O & Il sistema deve permettere ad un utente di inserire la e-mail di registrazione alla quale verrà inviato il link per il ripristino della password presso l'applicazione mobile& UC-37.1\\
     R-25.2-F-O & Il sistema deve permettere l'inserimento di una nuova password personale presso l'applicazione mobile& UC-37.2\\
     R-25.3-F-O & Il sistema deve permettere ad un utente di re-inserire la nuova password di conferma presso l'applicazione mobile& UC-37.3\\
     R-26-F-O & Il sistema deve permettere ad un utente di modificare la propria password personale presso l'applicazione mobile& UC-41\\
