--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiQualitativi.tex
@@ -8,7 +8,7 @@
     {\textbf{Fonte}}                                                                                                                                                      \\
 
     % R-1-F-0                  & Il sistema deve permettere ad un amministratore di accedere al portale web                                   & ...                         \\
-    % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria mail con la quale si \`{e} registrato & ...                         \\
+    % R-1.1-F-0                & Il sistema deve permettere ad un amministratore di inserire la propria e-mail con la quale si \`{e} registrato & ...                         \\
     % X.X.X                    & XXXX-XX-XX                                                                                                   & ...                         \\
 
     R-1-Q-O     & La progettazione e la codifica devono rispettare le norme e le metriche definite nei documenti \NdPv{} e \PdQv{} & Interno\\
